# Sample

apollo2b-medical-qa-final/: README.md  adapter_config.json  tokenizer_config.json
medical_rag_library/: pubmedqa.csv  user_feedback.json
medical_rag_library/.ipynb_checkpoints/: user_feedback-checkpoint.json
medical_rag_system/: .coverage  Dockerfile  README.md  Untitled.ipynb  example.env  pyproject.toml  run_local.sh
medical_rag_system/.github/workflows/: ci.yml
medical_rag_system/medical_rag/: __init__.py  config.py  model_loader.py
medical_rag_system/medical_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
medical_rag_system/medical_rag/api/: server.py
medical_rag_system/medical_rag/feedback/: __init__.py  feedback_store.py
medical_rag_system/medical_rag/prompt/: __init__.py  templating.py
medical_rag_system/medical_rag/retrieval/: utils.py
medical_rag_system/medical_rag/retrieval/.ipynb_checkpoints/: __init__-checkpoint.py  loader-checkpoint.py  store-checkpoint.py
medical_rag_system/medical_rag/schema/: response_schema.py
medical_rag_system/medical_rag/utils/: logging.py
medical_rag_system/medical_rag/web_search/: __init__.py  pubmed_ddg.py
medical_rag_system/medical_rag_library/.ipynb_checkpoints/: medical_rag_metadata-checkpoint.json
medical_rag_system/tests/: test_feedback_store.py  test_integration.py  test_retrieval_store.py
