[project]
name = "medical-rag"
version = "1.0.0"
description = "Production Medical RAG system"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0", "transformers>=4.30.0", "peft>=0.4.0",
    "sentence-transformers>=2.2.0", "faiss-cpu>=1.7.4",
    "accelerate>=0.20.0", "bitsandbytes>=0.41.0",
    "fastapi>=0.100.0", "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0", "pydantic-settings>=2.0.0",
    "structlog>=23.1.0", "prometheus-client>=0.17.0",
    "aiohttp>=3.8.0", "tenacity>=8.2.0", "scikit-learn>=1.3.0",
    "numpy>=1.24.0", "cryptography>=41.0.0"
]
[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.1.0", "mypy>=1.4.0", "ruff>=0.0.280", "black>=23.7.0"]
[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.pytest.ini_options]
testpaths = ["tests"]
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
[tool.ruff]
line-length = 100
target-version = "py310"
[tool.black]
line-length = 100
target-version = ['py310']
